--- a/public/bio.html
+++ b/public/bio.html
@@ -19,8 +19,11 @@
 <h2 id="very-short-biography">Very short biography</h2>
 <p>&quot;Tom Counsell works at the Department of Energy and Climate Change where he helps people to understand what needs to be built in order to tackle climate change.&quot;</p>
 <h2 id="short-biography">Short biography</h2>
-<p>&quot;Tom Counsell works at the Department of Energy and Climate Change where he heads a team that helps people to understand what needs to be built in order to tackle climate change. Prior to that he worked at the Carbon Trust, and as a strategy consultant. He has a PhD in engineering.&quot;</p>
+<p>&quot;Tom Counsell works at the Department of Energy and Climate Change where he heads a team that helps people to understand what needs to be built in order to tackle climate change. Prior to that he worked at the Carbon Trust and as a strategy consultant. He has a PhD in engineering.&quot;</p>
 <h2 id="long-biography">Long biography</h2>
 <p>&quot;Dr Thomas Counsell heads the UK Department of Energy and Climate Change's 2050 team. The team helps people to understand what needs to be built in order to tackle climate change and has won two civil service awards for its tools that aid public understanding of the energy system and for the help it has given to other countries in understanding the future of their energy systems. Previously he started the department's central engineering team, and before that he was assistant to David MacKay who was then the department's Chief Scientific Adivisor. During his first year at the department he was seconded from the Carbon Trust where he had worked with Michael Grubb on Emissions Trading Schemes and aspects of the Carbon Trust's offer and organisational design. He has also worked as strategy consultant, advising on business models, organisation design and restructuring in the UK, the Netherlands, Hong Kong and Canada. He has an MEng and a PhD in engineering from the University of Cambridge, where he was at Clare College. His PhD was supervised by Julian Allwood. He is married with two children, lives in Brighton, and enjoys programming in his spare time.&quot;</p>
+<h1 id="a-photo">A photo</h1>
+<p><img src='/tomcounsell_head.JPG' width='200px' height='200px'></p>
+<p><a href='/tomcounsell_head.JPG'>1369 × 1369 pixels - 488 KB</a></p>
 </body>
 </html>
