--- a/public/bio.html
+++ b/public/bio.html
@@ -12,18 +12,18 @@
   </header>
   <p>Return to the <a href="/">home page</a>.</p>
 <h1>Words to describe me (for seminar &amp; talk programmes etc)</h1>
-<p>Formally, I am &quot;Dr Thomas Counsell&quot; though I am happy to be referred to as &quot;Tom&quot; or &quot;Tom Counsell&quot;.</p>
-<p>My job title is &quot;Deputy Director, Analysis&quot; and I work at the UK&#39;s &quot;Department of Energy and Climate Change&quot;. You can also say I am &quot;A senior civil servant at the Department of Energy and Climate Change&quot;.</p>
+<p>Formally, I am "Dr Thomas Counsell" though I am happy to be referred to as "Tom" or "<a href="/index.html">Tom Counsell</a>".</p>
+<p>My job title is "Deputy Director, Analysis" and I work at the UK's "Department of Energy and Climate Change". You can also say I am "A senior civil servant at the Department of Energy and Climate Change".</p>
 <h2>Very short biography</h2>
-<p>&quot;Tom Counsell works at the Department of Energy and Climate Change where he helps people to understand what needs to be built in order to tackle climate change.&quot;</p>
+<p>"<a href="/index.html">Tom Counsell</a> works at the Department of Energy and Climate Change where he helps people to understand what needs to be built in order to tackle climate change."</p>
 <h2>Short biography</h2>
-<p>&quot;Tom Counsell works at the Department of Energy and Climate Change where he helps people to understand what needs to be built in order to tackle climate change. Prior to that he worked at the Carbon Trust and as a strategy consultant. He has a PhD in engineering.&quot;</p>
+<p>"<a href="/index.html">Tom Counsell</a> works at the Department of Energy and Climate Change where he helps people to understand what needs to be built in order to tackle climate change. Prior to that he worked at the Carbon Trust and as a strategy consultant. He has a PhD in engineering."</p>
 <h2>Long biography</h2>
-<p>&quot;Dr Thomas Counsell works at the UK Department of Energy and Climate Change. He helps people to understand what needs to be built in order to tackle climate change and his teams have won two civil service awards: the first for for its tools that aid public understanding of the energy system and the second for the help it has given to other countries in understanding the future of their energy systems. He also started the department&#39;s central engineering team, and before that he was assistant to David MacKay who was then the department&#39;s Chief Scientific Adivisor. During his first year at the department he was seconded from the Carbon Trust where he had worked with Michael Grubb on Emissions Trading Schemes and aspects of the Carbon Trust&#39;s offer and organisational design. He has also worked as strategy consultant, advising on business models, organisation design and restructuring in the UK, the Netherlands, Hong Kong and Canada. He has an MEng and a PhD in engineering from the University of Cambridge, where he was at Clare College. His PhD was supervised by Julian Allwood. He is married with two children, lives in Brighton, and enjoys programming in his spare time.&quot;</p>
+<p>"Dr Thomas Counsell works at the UK Department of Energy and Climate Change. He helps people to understand what needs to be built in order to tackle climate change and his teams have won two civil service awards: the first for for its tools that aid public understanding of the energy system and the second for the help it has given to other countries in understanding the future of their energy systems. He also started the department's central engineering team, and before that he was assistant to David MacKay who was then the department's Chief Scientific Adivisor. During his first year at the department he was seconded from the Carbon Trust where he had worked with Michael Grubb on Emissions Trading Schemes and aspects of the Carbon Trust's offer and organisational design. He has also worked as strategy consultant, advising on business models, organisation design and restructuring in the UK, the Netherlands, Hong Kong and Canada. He has an MEng and a PhD in engineering from the University of Cambridge, where he was at Clare College. His PhD was supervised by Julian Allwood. He is married with two children, lives in Brighton, and enjoys <a href="/programming/index.html">programming</a> in his spare time."</p>
 <h1>A photo</h1>
-<img src='/tomcounsell_head.JPG' width='200px' height='200px'>
+<img src="/tomcounsell_head.JPG" width="200px" height="200px">
 
-<p><a href='/tomcounsell_head.JPG'>1369 × 1369 pixels - 488 KB</a></p>
+<p><a href="/tomcounsell_head.JPG">1369 × 1369 pixels - 488 KB</a></p>
 
 </body>
 </html>
